--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "@wulkanowy/timetable-parser": "^1.5.0",
     "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
+    "idb": "^7.1.1",
     "pinia": "^2.0.32",
-    "sass": "^1.58.3",
-    "scss": "^0.2.4",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6",
-    "vuetify": "^3.1.6"
+    "vue-awesome-sidebar": "^1.2.3",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "sass": "^1.58.3",
     "vite": "^4.1.3",
     "vite-plugin-pwa": "^0.14.4"
   }
