--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@wulkanowy/timetable-parser": "^1.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "chroma-js": "^2.4.2",
     "idb": "^7.1.1",
     "pinia": "^2.0.32",
+    "pinia-plugin-persistedstate": "^3.1.0",
+    "string-to-color": "^2.2.2",
     "vue": "^3.2.47",
     "vue-awesome-sidebar": "^1.2.3",
     "vue-router": "^4.1.6"
