--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "@wulkanowy/timetable-parser": "^1.5.0",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "chroma-js": "^2.4.2",
     "pinia": "^2.0.32",
