--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
-    "@wulkanowy/timetable-parser": "^1.5.0",
+    "@wulkanowy/timetable-parser": "github:Bartek20/timetable-parser-js#zsm-fix",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "chroma-js": "^2.4.2",
