--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@popperjs/core": "^2.11.6",
     "@wulkanowy/timetable-parser": "github:Bartek20/timetable-parser-js#zsm-fix",
     "axios": "^1.3.4",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0-alpha3",
     "chroma-js": "^2.4.2",
     "pinia": "^2.0.32",
     "pinia-plugin-persistedstate": "^3.1.0",
