--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "@vueuse/core": "^9.13.0",
+    "@vueuse/router": "^9.13.0",
     "@wulkanowy/timetable-parser": "github:Bartek20/timetable-parser-js#zsm-fix",
     "axios": "^1.3.4",
     "bootstrap": "^5.3.0-alpha3",
