Added handling for school domain

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "preview": "vite preview --host"
+    "preview": "vite preview --host",
+    "compress": "rm zsm-timetable.tar.gz -f && tar -czvf zsm-timetable.tar.gz dist/"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
