--- a/package.json
+++ b/package.json
@@ -19,27 +19,28 @@
     "compress": "rm zsm-timetable.tar.gz -f && tar -czvf zsm-timetable.tar.gz dist/"
   },
   "dependencies": {
-    "@vueuse/core": "^9.13.0",
-    "@vueuse/router": "^9.13.0",
+    "@vueuse/core": "^10.1.0",
+    "@vueuse/router": "^10.1.0",
     "@wulkanowy/timetable-parser": "github:Bartek20/timetable-parser-js#zsm-fix",
-    "axios": "^1.3.4",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0-alpha3",
     "chroma-js": "^2.4.2",
-    "pinia": "^2.0.32",
+    "pinia": "^2.0.35",
     "pinia-plugin-persistedstate": "^3.1.0",
     "string-to-color": "^2.2.2",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue": "^4.2.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
-    "sass": "^1.58.3",
+    "sass": "^1.62.1",
     "terser": "^5.17.1",
-    "unplugin-auto-import": "^0.15.2",
+    "unplugin-auto-import": "^0.15.3",
     "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.1.3",
-    "vite-plugin-pwa": "^0.14.6"
+    "vite": "^4.3.3",
+    "vite-plugin-banner": "^0.7.0",
+    "vite-plugin-pwa": "^0.14.7"
   }
 }
