--- a/package.json
+++ b/package.json
@@ -21,26 +21,26 @@
 		"update:dev": "npm i -D @vitejs/plugin-vue@latest autoprefixer@latest postcss@latest sass@latest terser@latest unplugin-auto-import@latest unplugin-vue-components@latest vite@latest vite-plugin-banner@latest vite-plugin-pwa@latest"
 	},
 	"dependencies": {
-		"@vueuse/core": "^10.4.1",
-		"@vueuse/router": "^10.4.1",
-		"axios": "^1.5.0",
-		"bootstrap": "^5.3.1",
+		"@vueuse/core": "^10.5.0",
+		"@vueuse/router": "^10.5.0",
+		"axios": "^1.5.1",
+		"bootstrap": "^5.3.2",
 		"chroma-js": "^2.4.2",
 		"pinia": "^2.1.6",
 		"string-to-color": "^2.2.2",
 		"vue": "^3.3.4",
-		"vue-router": "^4.2.4"
+		"vue-router": "^4.2.5"
 	},
 	"devDependencies": {
-		"@vitejs/plugin-vue": "^4.3.4",
-		"autoprefixer": "^10.4.15",
-		"postcss": "^8.4.29",
-		"sass": "~1.64.2",
-		"terser": "^5.19.3",
+		"@vitejs/plugin-vue": "^4.4.0",
+		"autoprefixer": "^10.4.16",
+		"postcss": "^8.4.31",
+		"sass": "^1.69.0",
+		"terser": "^5.21.0",
 		"unplugin-auto-import": "^0.16.6",
 		"unplugin-vue-components": "^0.25.2",
-		"vite": "^4.4.9",
-		"vite-plugin-banner": "^0.7.0",
-		"vite-plugin-pwa": "^0.16.4"
+		"vite": "^4.4.11",
+		"vite-plugin-banner": "^0.7.1",
+		"vite-plugin-pwa": "^0.16.5"
 	}
 }
