--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"dev": "vite --host --force",
+		"dev": "vite --host",
 		"build": "vite build",
 		"preview": "vite preview --host"
 	},
@@ -17,18 +17,18 @@
 		"fuzzyset": "^1.0.7",
 		"pinia": "^2.1.7",
 		"string-to-color": "^2.2.2",
-		"vue": "^3.4.15",
+		"vue": "^3.4.16",
 		"vue-router": "^4.2.5"
 	},
 	"devDependencies": {
 		"@vitejs/plugin-vue": "^5.0.3",
 		"autoprefixer": "^10.4.17",
-		"postcss": "^8.4.34",
+		"postcss": "^8.4.35",
 		"sass": "^1.70.0",
 		"terser": "^5.27.0",
 		"unplugin-auto-import": "^0.17.5",
 		"unplugin-vue-components": "^0.26.0",
-		"vite": "^5.0.12",
+		"vite": "^5.1.0",
 		"vite-plugin-banner": "^0.7.1",
 		"vite-plugin-pwa": "^0.17.5"
 	}
