--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"dev": "vite --host",
 		"build": "vite build",
-		"preview": "vite preview --host"
+		"preview": "vite preview --host",
+		"update": "node --no-warnings installLatest.js | bash"
 	},
 	"dependencies": {
 		"@nozbe/microfuzz": "^1.0.0",
@@ -14,22 +15,21 @@
 		"@vueuse/router": "^10.7.2",
 		"axios": "^1.6.7",
 		"chroma-js": "^2.4.2",
-		"fuzzyset": "^1.0.7",
 		"pinia": "^2.1.7",
 		"string-to-color": "^2.2.2",
-		"vue": "^3.4.16",
+		"vue": "^3.4.19",
 		"vue-router": "^4.2.5"
 	},
 	"devDependencies": {
-		"@vitejs/plugin-vue": "^5.0.3",
+		"@vitejs/plugin-vue": "^5.0.4",
 		"autoprefixer": "^10.4.17",
 		"postcss": "^8.4.35",
 		"sass": "^1.70.0",
 		"terser": "^5.27.0",
 		"unplugin-auto-import": "^0.17.5",
 		"unplugin-vue-components": "^0.26.0",
-		"vite": "^5.1.0",
+		"vite": "^5.1.2",
 		"vite-plugin-banner": "^0.7.1",
-		"vite-plugin-pwa": "^0.17.5"
+		"vite-plugin-pwa": "^0.18.1"
 	}
 }
