--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@vueuse/router": "^10.8.0",
 		"axios": "^1.6.7",
 		"chroma-js": "^2.4.2",
+		"floating-vue": "^5.2.2",
 		"pinia": "^2.1.7",
 		"string-to-color": "^2.2.2",
 		"vue": "^3.4.19",
