--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
 		"pinia": "^2.1.7",
 		"string-to-color": "^2.2.2",
 		"vue": "^3.4.19",
-		"vue-router": "^4.2.5"
+		"vue-router": "^4.3.0"
 	},
 	"devDependencies": {
+		"@rollup/plugin-terser": "^0.4.4",
 		"@vitejs/plugin-vue": "^5.0.4",
 		"autoprefixer": "^10.4.17",
 		"postcss": "^8.4.35",
-		"sass": "^1.71.0",
-		"terser": "^5.27.2",
+		"sass": "^1.71.1",
 		"unplugin-auto-import": "^0.17.5",
 		"unplugin-vue-components": "^0.26.0",
-		"vite": "^5.1.3",
+		"vite": "^5.1.4",
 		"vite-plugin-banner": "^0.7.1",
 		"vite-plugin-pwa": "^0.19.0"
 	}
