--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 	},
 	"dependencies": {
 		"@nozbe/microfuzz": "^1.0.0",
+		"@sentry/vite-plugin": "^2.14.3",
+		"@sentry/vue": "^7.106.1",
 		"@vueuse/core": "^10.9.0",
 		"@vueuse/router": "^10.9.0",
 		"axios": "^1.6.7",
