--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	"dependencies": {
 		"@nozbe/microfuzz": "^1.0.0",
 		"@sentry/vite-plugin": "^2.16.0",
-		"@sentry/vue": "^7.108.0",
+		"@sentry/vue": "^7.109.0",
 		"@vueuse/core": "^10.9.0",
 		"@vueuse/router": "^10.9.0",
 		"axios": "^1.6.8",
@@ -30,8 +30,9 @@
 		"sass": "^1.72.0",
 		"unplugin-auto-import": "^0.17.5",
 		"unplugin-vue-components": "^0.26.0",
-		"vite": "^5.2.6",
+		"vite": "^5.2.7",
 		"vite-plugin-banner": "^0.7.1",
-		"vite-plugin-pwa": "^0.19.7"
+		"vite-plugin-pwa": "^0.19.7",
+		"workbox-broadcast-update": "^7.0.0"
 	}
 }
