--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"unplugin-vue-components": "^0.26.0",
 		"vite": "^5.2.7",
 		"vite-plugin-banner": "^0.7.1",
-		"vite-plugin-pwa": "^0.19.7"
+		"vite-plugin-pwa": "^0.19.7",
+		"workbox-broadcast-update": "^7.0.0"
 	}
 }
