--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"floating-vue": "^5.2.2",
 		"string-to-color": "^2.2.2",
 		"vue": "^3.4.21",
-		"vue-router": "^4.3.0"
+		"vue-router": "^4.3.0",
+		"vue-toastification": "github:Bartek20/vue-toastification#next"
 	},
 	"devDependencies": {
 		"@rollup/plugin-terser": "^0.4.4",
@@ -32,7 +33,6 @@
 		"unplugin-vue-components": "^0.26.0",
 		"vite": "^5.2.7",
 		"vite-plugin-banner": "^0.7.1",
-		"vite-plugin-pwa": "^0.19.7",
-		"workbox-broadcast-update": "^7.0.0"
+		"vite-plugin-pwa": "^0.19.7"
 	}
 }
