--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
 		"@rollup/plugin-terser": "^0.4.4",
 		"@vitejs/plugin-vue": "^5.0.4",
 		"autoprefixer": "^10.4.19",
+		"chalk": "^5.3.0",
+		"inquirer": "^9.2.19",
+		"nanospinner": "^1.1.0",
 		"postcss": "^8.4.38",
 		"sass": "^1.75.0",
 		"unplugin-auto-import": "^0.17.5",
