--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	"dependencies": {
 		"@nozbe/microfuzz": "^1.0.0",
 		"@sentry/vite-plugin": "^2.22.0",
-		"@sentry/vue": "^8.24.0",
+		"@sentry/vue": "^8.25.0",
 		"@vueuse/core": "^10.11.1",
 		"@vueuse/router": "^10.11.1",
 		"axios": "^1.7.3",
@@ -30,9 +30,10 @@
 		"postcss": "^8.4.41",
 		"sass": "^1.77.8",
 		"unplugin-auto-import": "^0.18.2",
-		"unplugin-vue-components": "^0.27.3",
+		"unplugin-vue-components": "^0.27.4",
 		"vite": "^5.4.0",
 		"vite-plugin-banner": "^0.7.1",
-		"vite-plugin-pwa": "^0.20.1"
+		"vite-plugin-pwa": "^0.20.1",
+		"vite-plugin-webfont-dl": "^3.9.5"
 	}
 }
