--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
 	},
 	"dependencies": {
 		"@nozbe/microfuzz": "^1.0.0",
-		"@sentry/vite-plugin": "^2.22.1",
-		"@sentry/vue": "^8.25.0",
+		"@sentry/vite-plugin": "^2.22.2",
+		"@sentry/vue": "^8.26.0",
 		"@vueuse/core": "^10.11.1",
 		"@vueuse/router": "^10.11.1",
 		"axios": "^1.7.4",
-		"chroma-js": "^2.6.0",
+		"chroma-js": "^2.6.1-0",
 		"floating-vue": "^5.2.2",
 		"string-to-color": "^2.2.2",
-		"vue": "^3.4.37",
+		"vue": "^3.4.38",
 		"vue-router": "^4.4.3",
 		"vue-toastification": "github:Bartek20/vue-toastification#next"
 	},
