--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 		"dev": "vite --host",
 		"build": "vite build",
 		"preview": "vite preview --host",
+		"prettier": "npx prettier . --check",
+		"prettier:fix": "npx prettier . --write",
 		"update": "node --no-warnings installLatest.js | bash"
 	},
 	"dependencies": {
@@ -28,6 +30,7 @@
 		"@vitejs/plugin-vue": "^5.1.2",
 		"autoprefixer": "^10.4.20",
 		"postcss": "^8.4.41",
+		"prettier": "^3.3.3",
 		"sass": "^1.77.8",
 		"unplugin-auto-import": "^0.18.2",
 		"unplugin-vue-components": "^0.27.4",
