--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
 	},
 	"dependencies": {
 		"@nozbe/microfuzz": "^1.0.0",
-		"@sentry/vite-plugin": "^2.22.2",
-		"@sentry/vue": "^8.26.0",
-		"@vueuse/core": "^10.11.1",
-		"@vueuse/router": "^10.11.1",
-		"axios": "^1.7.4",
-		"chroma-js": "^2.6.1-0",
+		"@sentry/vite-plugin": "^2.22.3",
+		"@sentry/vue": "^8.27.0",
+		"@vueuse/core": "^11.0.3",
+		"@vueuse/router": "^11.0.3",
+		"axios": "^1.7.7",
+		"chroma-js": "^3.0.0",
 		"floating-vue": "^5.2.2",
 		"string-to-color": "^2.2.2",
 		"vue": "^3.4.38",
@@ -27,16 +27,16 @@
 	},
 	"devDependencies": {
 		"@rollup/plugin-terser": "^0.4.4",
-		"@vitejs/plugin-vue": "^5.1.2",
+		"@vitejs/plugin-vue": "^5.1.3",
 		"autoprefixer": "^10.4.20",
-		"postcss": "^8.4.41",
+		"postcss": "^8.4.42",
 		"prettier": "^3.3.3",
 		"sass": "^1.77.8",
 		"unplugin-auto-import": "^0.18.2",
 		"unplugin-vue-components": "^0.27.4",
-		"vite": "^5.4.1",
+		"vite": "^5.4.2",
 		"vite-plugin-banner": "^0.7.1",
-		"vite-plugin-pwa": "^0.20.1",
+		"vite-plugin-pwa": "^0.20.2",
 		"vite-plugin-webfont-dl": "^3.9.5"
 	}
 }
